--- a/templates/page/stock/stock.html
+++ b/templates/page/stock/stock.html
@@ -24,8 +24,8 @@
 			<th ng-click="sort('datetime')" width="5%">Date</th>
 			<th ng-click="sort('quantity')" width="5%">Stock Added</th>
 			<th ng-click="sort('stock_previous')" width="5%">Stock(Ideal)</th>
-			<th ng-click="sort('stock_actual')" width="5%">Stock(Actual)</th>
-			<th ng-click="sort('stock_previous-stock_actual')" width="5%">Waste</th>
+			<th ng-click="sort('actual')" width="5%">Stock(Actual)</th>
+			<th ng-click="sort('stock_previous-actual')" width="5%">Waste</th>
 			<th ng-click="sort('remarks')" width="5%">Remarks</th>
 		</tr>
 		</thead>
@@ -36,8 +36,8 @@
 			    <td data-title="DateTime">{{ s.datetime }}</td>
 			    <td data-title="Quantity">{{ s.quantity }}</td>
 			    <td data-title="Price">{{ s.stock_previous }}</td>
-			    <td data-title="Price">{{ s.stock_actual }}</td>
-			    <td data-title="Price">{{ s.stock_previous-s.stock_actual }}</td>
+			    <td data-title="Price">{{ s.actual }}</td>
+			    <td data-title="Price">{{ s.stock_previous-s.actual }}</td>
 			    <td data-title="Price">{{ s.remarks }}</td>
 			     
 	   	    </tr>
