--- a/templates/page/stock/stockreport.html
+++ b/templates/page/stock/stockreport.html
@@ -57,7 +57,7 @@
 			    <td data-title="Actual">{{ e.actual }}</td>
 			    <td data-title="Ideal">{{ e.ideal }}</td>
 			    <td data-title="Variance">{{ e.varian }}</td>
-			    <td data-title="DateTime">{{ e.datetim }}</td>
+			    <td data-title="DateTime">{{ e.date_time }}</td>
 			    <!--<td data-title="Time">{{  }}</td>-->		     
 	   	    </tr>
 		</tbody>
